// Copyright Â© 2017-2018 Stratumn SAS
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "github.com/stratumn/go-indigonode/core/crypto/crypto.proto";

import "google/protobuf/timestamp.proto";

package stratumn.indigonode.core.protector;

option go_package = "github.com/stratumn/go-indigonode/core/protector/pb;pb";

enum NetworkState {
	// The network is in the bootstrap phase (not fully private yet).    
    BOOTSTRAP = 0;
	// The network bootstrap phase is complete and the network is now protected.    
    PROTECTED = 1;
}

// A list of multiaddresses.
message PeerAddrs {
    repeated string addresses = 1;
}

// The NetworkConfig message contains the network state
// and its participants (signed by a trusted node).
message NetworkConfig {
    NetworkState network_state = 1;
    map<string, PeerAddrs> participants = 2;
    google.protobuf.Timestamp last_updated = 3;
    stratumn.indigonode.core.crypto.Signature signature = 10;
}